[hp-ilt] add daemon project registry
